[data] Start HTML structure and BEM

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>C'est parti mon coco</title>
     <link rel="stylesheet" href="styles/style.scss" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header class="brand">
+      <img class="brand__logo" src="" alt="" />
+      <h1 class="brand__catchphrase">coucou</h1>
+    </header>
+    <main>
+      <section class="bottle">
+        <img src="" alt="" class="bottle__image" />
+        <p class="bottle__adjectives"></p>
+        <p class="bottle__adjectives"></p>
+      </section>
+      <section class="juice">
+        <figure class="ingredient">
+          <img class="ingredient__image" src="" alt="" />
+          <figcaption class="ingredient__description"></figcaption>
+        </figure>
+        <figure class="ingredient">
+          <img class="ingredient__image" src="" alt="" />
+          <figcaption class="ingredient__description"></figcaption>
+        </figure>
+        <figure class="ingredient">
+          <img class="ingredient__image" src="" alt="" />
+          <figcaption class="ingredient__description"></figcaption>
+        </figure>
+        <figure class="ingredient">
+          <img class="ingredient__image" src="" alt="" />
+          <figcaption class="ingredient__description"></figcaption>
+        </figure>
+        <figure class="ingredient">
+          <img class="ingredient__image" src="" alt="" />
+          <figcaption class="ingredient__description"></figcaption>
+        </figure>
+        <figure class="ingredient">
+          <img class="ingredient__image" src="" alt="" />
+          <figcaption class="ingredient__description"></figcaption>
+        </figure>
+      </section>
+    </main>
   </body>
 </html>
