[DATA] ADD images

--- a/src/index.html
+++ b/src/index.html
@@ -18,30 +18,36 @@
         <p class="bottle__adjectives"></p>
       </section>
       <section class="juice">
-        <figure class="ingredient">
-          <img class="ingredient__image" src="" alt="" />
-          <figcaption class="ingredient__description"></figcaption>
-        </figure>
-        <figure class="ingredient">
-          <img class="ingredient__image" src="" alt="" />
-          <figcaption class="ingredient__description"></figcaption>
-        </figure>
-        <figure class="ingredient">
-          <img class="ingredient__image" src="" alt="" />
-          <figcaption class="ingredient__description"></figcaption>
-        </figure>
-        <figure class="ingredient">
-          <img class="ingredient__image" src="" alt="" />
-          <figcaption class="ingredient__description"></figcaption>
-        </figure>
-        <figure class="ingredient">
-          <img class="ingredient__image" src="" alt="" />
-          <figcaption class="ingredient__description"></figcaption>
-        </figure>
-        <figure class="ingredient">
-          <img class="ingredient__image" src="" alt="" />
-          <figcaption class="ingredient__description"></figcaption>
-        </figure>
+        <section class="product">
+          <h2 class="product__catchphrase"></h1>
+          <p class="product__description"></p>
+        </section>
+        <section class="recipe">
+          <figure class="ingredient">
+            <img class="ingredient__image" src="" alt="" />
+            <figcaption class="ingredient__description"></figcaption>
+          </figure>
+          <figure class="ingredient">
+            <img class="ingredient__image" src="" alt="" />
+            <figcaption class="ingredient__description"></figcaption>
+          </figure>
+          <figure class="ingredient">
+            <img class="ingredient__image" src="" alt="" />
+            <figcaption class="ingredient__description"></figcaption>
+          </figure>
+          <figure class="ingredient">
+            <img class="ingredient__image" src="" alt="" />
+            <figcaption class="ingredient__description"></figcaption>
+          </figure>
+          <figure class="ingredient">
+            <img class="ingredient__image" src="" alt="" />
+            <figcaption class="ingredient__description"></figcaption>
+          </figure>
+          <figure class="ingredient">
+            <img class="ingredient__image" src="" alt="" />
+            <figcaption class="ingredient__description"></figcaption>
+          </figure>
+        </section>
       </section>
     </main>
   </body>
