[SCSS] ADD styling to the 'brand' bloc

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,17 @@
   </head>
   <body>
     <header class="brand">
-      <img class="brand__logo" src="" alt="" />
-      <h1 class="brand__catchphrase">coucou</h1>
+      <img class="brand__logo" src="./assets/img/logo.png" alt="logo Innocent" />
+      <h1 class="brand__catchphrase">Les saveurs des tropiques</h1>
     </header>
     <main>
       <section class="bottle">
-        <img src="" alt="" class="bottle__image" />
-        <p class="bottle__adjectives"></p>
-        <p class="bottle__adjectives"></p>
+        <img src="./assets/img/bottle.png" alt="image Bouteille" class="bottle__image" />
+        <div class="bottle__adjectives">
+          <p class="bottle__adjective"></p>
+          <p class="bottle__adjective"></p>
+        </div>
+
       </section>
       <section class="juice">
         <section class="product">
@@ -24,31 +27,32 @@
         </section>
         <section class="recipe">
           <figure class="ingredient">
-            <img class="ingredient__image" src="" alt="" />
+            <img class="ingredient__image" src="./assets/img/pineapple.png" alt="image Ananas" />
             <figcaption class="ingredient__description"></figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="" alt="" />
+            <img class="ingredient__image" src="./assets/img/banana.png" alt="image Banane" />
             <figcaption class="ingredient__description"></figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="" alt="" />
+            <img class="ingredient__image" src="./assets/img/apple.png" alt="image Pomme" />
             <figcaption class="ingredient__description"></figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="" alt="" />
+            <img class="ingredient__image" src="./assets/img/orange.png" alt="image Orange" />
             <figcaption class="ingredient__description"></figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="" alt="" />
+            <img class="ingredient__image" src="./assets/img/coco.png" alt="image Noix de coco" />
             <figcaption class="ingredient__description"></figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="" alt="" />
+            <img class="ingredient__image" src="./assets/img/lemon.png" alt="image Citron" />
             <figcaption class="ingredient__description"></figcaption>
           </figure>
         </section>
       </section>
+      <div>Font made from <a href="http://www.onlinewebfonts.com">oNline Web Fonts</a>is licensed by CC BY 3.0</div>
     </main>
   </body>
 </html>
