[SCSS] ADD styling to the 'juice' bloc

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,11 @@
       <img class="brand__logo" src="./assets/img/logo.png" alt="logo Innocent" />
       <h1 class="brand__catchphrase">Les saveurs des tropiques</h1>
     </header>
+    <hr class="line">
+
     <main>
       <section class="bottle">
-        <div class="bottle__position" id="bottle"><div class="bottle__jiggle"><img src="./assets/img/bottle.png" alt="image Bouteille" class="bottle__image" /></div></div>
+        <div class="bottle__position" id="bottle"><img src="./assets/img/bottle.png" alt="image Bouteille" class="bottle__image" /></div>
         <div class="bottle__adjectives" id="adjectives">
           <p class="bottle__adjective"><span>E</span><span>x</span><span>o</span><span>t</span><span>i</span><span>q</span><span>u</span><span>e</span></p>
           <p class="bottle__adjective bottle__adjective--middle"><span class="bottle__letter">R</span><span class="bottle__letter">a</span><span class="bottle__letter">f</span><span class="bottle__letter">f</span><span class="bottle__letter">r</span><span class="bottle__letter">a</span><span class="bottle__letter">i</span><span class="bottle__letter">c</span><span class="bottle__letter">h</span><span class="bottle__letter">i</span><span class="bottle__letter">s</span><span class="bottle__letter">s</span><span class="bottle__letter">a</span><span class="bottle__letter">n</span><span class="bottle__letter">t</span></p>
@@ -24,33 +26,34 @@
       </section>
       <section class="juice">
         <section class="product">
-          <h2 class="product__catchphrase"></h1>
-          <p class="product__description"></p>
+          <h2 class="product__catchphrase">Le smoothie au gout vacances !</h1>
+          <p class="product__description">Marre de voir les photos de vos potes sur la plage, pieds en éventail ? C'est bien normal, on vous comprend bien. C'est pourquoi on a créé ce smoothie ananas, banane et coco. Comme ça, vous pouvez vivre des vacances depuis votre cananpé ! Pas mal, hein ?</p>
         </section>
         <section class="recipe">
+          <h1 class="recipe__ingredients">Ingredients</h1>
           <figure class="ingredient">
-            <img class="ingredient__image" src="./assets/img/pineapple.png" alt="image Ananas" />
-            <figcaption class="ingredient__description"></figcaption>
+            <div class="ingredient__image"><img class="ingredient__jiggle" src="./assets/img/pineapple.png" alt="image Ananas" /></div>
+            <figcaption class="ingredient__description">39% d'ananas bien goutu ! De quoi voyager et dire bonjour aux plamiers</figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="./assets/img/banana.png" alt="image Banane" />
-            <figcaption class="ingredient__description"></figcaption>
+            <div class="ingredient__image ingredient__image--even"><img class="ingredient__jiggle" src="./assets/img/banana.png" alt="image Banane" /></div>
+            <figcaption class="ingredient__description">37% de bananes bien jaunes et mure, élevées en pleine air et récoltée dqns des conditions dignes</figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="./assets/img/apple.png" alt="image Pomme" />
-            <figcaption class="ingredient__description"></figcaption>
+            <div class="ingredient__image"><img class="ingredient__jiggle" src="./assets/img/apple.png" alt="image Pomme" /></div>
+            <figcaption class="ingredient__description">De bonnes pommes pressées, rouge comme votre peau cet été</figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="./assets/img/orange.png" alt="image Orange" />
-            <figcaption class="ingredient__description"></figcaption>
+            <div class="ingredient__image ingredient__image--even"><img class="ingredient__jiggle" src="./assets/img/orange.png" alt="image Orange" /></div>
+            <figcaption class="ingredient__description">Des oranges pleines de vitamines pour aller à la plage</figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="./assets/img/coco.png" alt="image Noix de coco" />
-            <figcaption class="ingredient__description"></figcaption>
+            <div class="ingredient__image"><img class="ingredient__jiggle" src="./assets/img/coco.png" alt="image Noix de coco" /></div>
+            <figcaption class="ingredient__description">3% de lait de coco, pour la douceur des tropiques</figcaption>
           </figure>
           <figure class="ingredient">
-            <img class="ingredient__image" src="./assets/img/lemon.png" alt="image Citron" />
-            <figcaption class="ingredient__description"></figcaption>
+            <div class="ingredient__image ingredient__image--even"><img class="ingredient__jiggle" src="./assets/img/lemon.png" alt="image Citron" /></div>
+            <figcaption class="ingredient__description">C'est un citron</figcaption>
           </figure>
         </section>
       </section>
