[SCSS HTML] EDIT general styling and ADD pub bloc

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,11 @@
     <script defer src="scripts/bottle.js"></script>
   </head>
   <body>
-    <header class="brand">
+    <header class="beach">
+      <div class="brand">
       <img class="brand__logo" src="./assets/img/logo.png" alt="logo Innocent" />
       <h1 class="brand__catchphrase">Les saveurs des tropiques</h1>
-    </header>
-    <hr class="line">
-
-    <main>
+    </div>
       <section class="bottle">
         <div class="bottle__position" id="bottle"><img src="./assets/img/bottle.png" alt="image Bouteille" class="bottle__image" /></div>
         <div class="bottle__adjectives" id="adjectives">
@@ -22,13 +20,17 @@
           <p class="bottle__adjective bottle__adjective--middle"><span class="bottle__letter">R</span><span class="bottle__letter">a</span><span class="bottle__letter">f</span><span class="bottle__letter">f</span><span class="bottle__letter">r</span><span class="bottle__letter">a</span><span class="bottle__letter">i</span><span class="bottle__letter">c</span><span class="bottle__letter">h</span><span class="bottle__letter">i</span><span class="bottle__letter">s</span><span class="bottle__letter">s</span><span class="bottle__letter">a</span><span class="bottle__letter">n</span><span class="bottle__letter">t</span></p>
           <p class="bottle__adjective"><span>E</span><span>n</span><span>e</span><span>r</span><span>g</span><span>i</span><span>q</span><span>u</span><span>e</span></p>
         </div>
+       </section>
+    </header>
 
-      </section>
-      <section class="juice">
+      <main>
+      <section class="sand">
+ 
         <section class="product">
           <h2 class="product__catchphrase">Le smoothie au gout vacances !</h1>
           <p class="product__description">Marre de voir les photos de vos potes sur la plage, pieds en éventail ? C'est bien normal, on vous comprend bien. C'est pourquoi on a créé ce smoothie ananas, banane et coco. Comme ça, vous pouvez vivre des vacances depuis votre cananpé ! Pas mal, hein ?</p>
         </section>
+
         <section class="recipe">
           <h1 class="recipe__ingredients">Ingredients</h1>
           <figure class="ingredient">
@@ -56,7 +58,13 @@
             <figcaption class="ingredient__description">C'est un citron</figcaption>
           </figure>
         </section>
+      <section class="pub">
+        <h2 class="pub__title">Une autre de nos boissons vous interesse?</h2><iframe class="pub__video" src="https://www.youtube.com/embed/QPsGF1tGEI8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
+
+      </section>
+
+
       <div>Font made from <a href="http://www.onlinewebfonts.com">oNline Web Fonts</a>is licensed by CC BY 3.0</div>
     </main>
   </body>
