[HTML and SCSS] ADD 'goodbye' bloc and EDIT general responsive

--- a/src/index.html
+++ b/src/index.html
@@ -55,13 +55,16 @@
           </figure>
           <figure class="ingredient">
             <div class="ingredient__image ingredient__image--even"><img class="ingredient__jiggle" src="./assets/img/lemon.png" alt="image Citron" /></div>
-            <figcaption class="ingredient__description">C'est un citron</figcaption>
+            <figcaption class="ingredient__description">Quelques gouttes de citron, de quoi vous donner un peu de tonus</figcaption>
           </figure>
         </section>
       <section class="pub">
-        <h2 class="pub__title">Une autre de nos boissons vous interesse?</h2><iframe class="pub__video" src="https://www.youtube.com/embed/QPsGF1tGEI8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h2 class="pub__title">Une autre de nos boissons vous interesse?</h2><iframe src="https://www.youtube.com/embed/QPsGF1tGEI8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
-
+      <section class="goodbye">
+        <h2 class="goodbye__title">A bientot avec Innocent</h2>
+        <img class="goodye__trees" src="./assets/img/trees.png" alt="">
+      </section>
       </section>
 
 
