[HTML and SCSS] ADD 'credit' bloc

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,17 @@
       </section>
 
 
-      <div>Font made from <a href="http://www.onlinewebfonts.com">oNline Web Fonts</a>is licensed by CC BY 3.0</div>
+
     </main>
+    <footer class="credits">
+      <h2 class="credits__title">Precisions</h2>      
+      <p class="credits__text">Ce site a été réalisé dans un but pédagogique <br> Il n'est en aucun cas en lien avec <a class="credits__link" href="https://www.innocent.fr/">https://www.innocent.fr/</a></p>
+      <h2 class="credits__title">Credits</h2>      
+<p class="credits__text">
+  Font made from <a class="credits__link" href="http://www.onlinewebfonts.com">oNline Web Fonts</a> is licensed by CC BY 3.0<br>
+  Image par <a class="credits__link" href="https://pixabay.com/fr/users/AnnaliseArt-7089643/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4707995">Annalise Batista</a> de <a class="credits__link" href="https://pixabay.com/fr/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4707995">Pixabay</a>
+</p>
+
+    </footer>
   </body>
 </html>
