--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,8 @@
           </figure>
         </section>
       <section class="pub">
-        <h2 class="pub__title">Une autre de nos boissons vous interesse?</h2><iframe src="https://www.youtube.com/embed/QPsGF1tGEI8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h2 class="pub__title">Une autre de nos boissons vous interesse?</h2>
+        <iframe class="pub__video" src="https://www.youtube.com/embed/QPsGF1tGEI8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
       <section class="goodbye">
         <h2 class="goodbye__title">A bientot avec Innocent</h2>
